--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,17 @@
 /* stylelint-disable selector-list-comma-newline-after */
 
+/* mobile first! */
+.row {
+  margin-left: 0px;
+  width: 100%;
+}
+
+.nav-item {
+  top: 8px;
+  position: relative;
+}
+
+
 .blog-header {
   line-height: 1;
   border-bottom: 1px solid #000000;
@@ -8,7 +20,7 @@
 .blog-header-logo {
   font-family: 'Noto Serif SC', serif;
   font-weight: 800;
-  font-size: 2.25rem;
+  font-size: 1.6rem;
 }
 
 .blog-header-logo:hover {
@@ -33,12 +45,6 @@ h1, h2, h3, h4, h5, h6 {
 body {
   font-family: 'Noto Sans SC', sans-serif;
   font-weight: 300;
-}
-
-@media (min-width: 768px) {
-  .display-4 {
-    font-size: 3rem;
-  }
 }
 
 .nav-scroller {
@@ -78,9 +84,9 @@ body {
 }
 
 .h-250 { height: 250px; }
-@media (min-width: 768px) {
-  .h-md-250 { height: 250px; }
-}
+
+
+
 
 /*
  * Blog name and description
@@ -95,11 +101,6 @@ body {
   color: #999;
 }
 
-@media (min-width: 40em) {
-  .blog-title {
-    font-size: 3.5rem;
-  }
-}
 
 /* Pagination */
 .blog-pagination {
@@ -128,7 +129,7 @@ body {
 }
 
 .blog-content {
-  width: 670px;
+  width: 350px;
   margin: 0 auto;
   line-height: 1.6em;
   margin-bottom: 30px;
@@ -164,3 +165,200 @@ body {
 .blog-footer p:last-child {
   margin-bottom: 0;
 }
+
+
+
+/* for tablets */
+@media only screen and (min-width: 600px) {
+
+  .row {
+    width: 500px;
+    margin-left: -8px;
+  }
+
+  .col {
+    max-width: 45%;
+  }
+
+  .blog-header {
+    line-height: 1;
+    border-bottom: 1px solid #000000;
+  }
+  
+  .blog-header-logo {
+    font-family: 'Noto Serif SC', serif;
+    font-weight: 800;
+    font-size: 2.25rem;
+  }
+  
+  .blog-header-logo:hover {
+    text-decoration: none;
+  }
+  
+  .blog-header-date {
+    font-family: 'Noto Serif SC', serif;
+    font-weight: 800;
+    font-size: 2.5rem;
+  }
+  
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Noto Serif SC', serif;
+  }
+  
+  .display-4 {
+    font-size: 2.5rem;
+  }
+  
+  body {
+    font-family: 'Noto Sans SC', sans-serif;
+    font-weight: 300;
+  }
+  
+  .nav-scroller {
+    position: relative;
+    z-index: 2;
+    height: 2.75rem;
+    overflow-y: hidden;
+  }
+  
+  .nav-scroller .nav {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    padding-bottom: 1rem;
+    margin-top: -1px;
+    overflow-x: auto;
+    text-align: center;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+  }
+  
+  .nav-scroller .nav-link {
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    font-size: .875rem;
+  }
+  
+  .card-img-right {
+    height: 100%;
+    border-radius: 0 3px 3px 0;
+  }
+  
+  .flex-auto {
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+  }
+  
+  .h-250 { height: 250px; }
+  
+  /*
+   * Blog name and description
+   */
+  .blog-title {
+    margin-bottom: 0;
+    font-size: 2rem;
+    font-weight: 400;
+  }
+  .blog-description {
+    font-size: 1.1rem;
+    color: #999;
+  }
+  
+  
+  /* Pagination */
+  .blog-pagination {
+    margin-bottom: 4rem;
+  }
+  .blog-pagination > .btn {
+    border-radius: 2rem;
+  }
+  
+  /*
+   * Blog posts
+   */
+  .blog-post {
+    margin-bottom: 4rem;
+  }
+  .blog-post-title {
+    margin-top: 4rem;
+    margin-bottom: .25rem;
+    text-align: center;
+    font-size: 2.5rem;
+  }
+  .blog-post-meta {
+    margin-bottom: 1.25rem;
+    text-align: center;
+    color: #999;
+  }
+  
+  .blog-content {
+    width: 670px;
+    margin: 0 auto;
+    line-height: 1.6em;
+    margin-bottom: 30px;
+  }
+  
+  .highlight {
+    /*background: #FFF6EA;*/
+    text-decoration: underline;
+  }
+  
+  .quote-content {
+    width: 200px;
+    color: #1b3a6f;
+    margin: 0 auto;
+    /*line-height: 1.6em;*/
+    margin-bottom: 30px;
+  }
+  
+  .quote-highlight {
+    font-weight: 400;
+    background: rgba(223, 26, 44, 0.20);
+  }
+  
+  /*
+   * Footer
+   */
+  .blog-footer {
+    padding: 1.5rem 0;
+    color: #999;
+    text-align: center;
+    border-top: 1px solid #000000;
+  }
+  .blog-footer p:last-child {
+    margin-bottom: 0;
+  }
+
+  .nav-item {
+    top: 19px;
+    position: relative;
+  }
+
+}
+
+
+
+/* for desktop */
+@media only screen and (min-width: 768px) {
+  /* .display-4 {
+    font-size: 3rem;
+  }
+
+  .h-md-250 { 
+    height: 250px; 
+  } */
+
+
+}
+
+
+
+/* media request 2 */
+/* @media (min-width: 40em) {
+  .blog-title {
+    font-size: 3.5rem;
+  }
+
+} */
