Upload November Issue

--- a/css/scrolly.css
+++ b/css/scrolly.css
@@ -1,4 +1,4 @@
-#scrolly {
+/* #scrolly {
   position: relative;
   background-color: #f3f3f3;
   padding: 1rem;
@@ -59,4 +59,4 @@ figure p {
   padding: 1rem;
   font-size: 1.5rem;
   background-color: #3b3b3b;
-}
+} */
