update chart type

--- a/css/blog.css
+++ b/css/blog.css
@@ -284,9 +284,9 @@ body {
   }
   .blog-post-title {
     margin-top: 4rem;
-    margin-bottom: .25rem;
+    margin-bottom: 1rem;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   .blog-post-meta {
     margin-bottom: 1.25rem;
