--- a/css/blog.css
+++ b/css/blog.css
@@ -138,7 +138,14 @@ body {
 
 .highlight {
   /*background: #FFF6EA;*/
+  color: #000;
   text-decoration: underline;
+}
+
+.highlight:hover {
+  background-color: #000;
+  color: #FFF6EA;
+  /* text-decoration: underline; */
 }
 
 .quote-content {
@@ -166,6 +173,10 @@ body {
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
+}
+
+.footer-container {
+  width: 88%;
 }
 
 
@@ -335,10 +346,16 @@ body {
     margin-bottom: 0;
   }
 
+  .footer-container {
+    width: 100%;
+  }
+
   .nav-item {
     top: 19px;
     position: relative;
   }
+
+
 
 }
 
